--- a/vignettes/coxtools.bib
+++ b/vignettes/coxtools.bib
@@ -17,3 +17,10 @@
     address = {New York},
     isbn = {0-387-98784-3},
   }
+
+@book{box2004event,
+  title={Event history modeling: A guide for social scientists},
+  author={Box-Steffensmeier, Janet M  and Jones, Bradford S},
+  year={2004},
+  publisher={Cambridge University Press}
+}
