--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -31,10 +31,44 @@ coxph_fit <- coxph(Surv(start, stop, event) ~
 ```
 
 # `coxtools` Functions
-The `coxtools` package comes with a series of functions that are useful in assessing model fit.  The first examines the predicted probability of an event at some time *t* as a function of some essential covariate of interest.  For this function, all other control variables are held at their median or mean, for binary or continuous variables respectively.  The second function plots the DFBetas for the fitted model, showing how certain observations may be highly influential or poorly predicted.  The third function plots the Cox-Snell residuals which are a useful metric for understanding broader model fit.  Finally, the fourth function presents the Martingale residuals, which shows the relative contribution of particular variables.  This vignette is not designed to be a primer on goodness of fit measures for Cox PH Models, but instead, assist the user in applying these goodness of fit measures.  For a primer, I recommend @box2004event.  
+The `coxtools` package comes with a series of functions that are useful in assessing model fit.  The first examines the predicted probability of an event at some time *t* as a function of some essential covariate of interest.  For this function, all other control variables are held at their median or mean, for binary or continuous variables respectively.  The second function plots the DFBetas for the fitted model, showing how certain observations may be highly influential or poorly predicted.  The third function plots the Cox-Snell residuals which are a useful metric for understanding broader model fit.  Finally, the fourth function presents the deviance residuals, which shows how well the model fairs in predicting certain observations.  This vignette is not designed to be a primer on goodness of fit measures for Cox PH Models, but instead, assist the user in applying these goodness of fit measures.  For a primer, I recommend @box2004event.  
+
+## Predicted Probabilities
+To assist in assessing model fit and to aid in interpretation, `coxtools` has a function to examine the effects of particular covariates on observing an event at some fixed point in time.  This function `plot_predicted_probs()` is a plot-based wrapper for the `predictCox()` function in `riskRegression`.  This funciton has the greatest amount of customizability included given that it is more likely to be included in a manuscript than the other plots preduced.  This function takes a few arguments:
+
+* `coxph_fit`: The output from a fitted "coxph" call.
+
+* `var`: A character string specifying the variable from `coxph_fit` that predicted probabilities should be plotted for.
+
+* `time`: This is the fixed time point that should be used to calcualte the predicted probabilities.
+
+* `seed`: This is the seed that should be set for replication
+
+* `yaxis_label`:  This is the label as it appears for the y-axis.  This is the probability of not observing an event.
+
+* `xaxis_label`: This is the label ax it appears for the x-axis.  This is the range of variable values for the "var" variable.
+
+* `title`: This is the plot title as it should appear.
+
+```{r, echo=TRUE, eval=TRUE}
+
+plot_predicted_probs(coxph_fit,
+                     var = "age",
+                     time = mean(heart$stop-heart$start),
+                     seed = 123,
+                     yaxis_label = "Prob. of No Event",
+                     xaxis_label = "Age")
+```
+
+## DFBetas
+Analysts interested in seeing the influence of particular observations can also examine DFBetas.  DFBetas help the analyst understand how the removal of particular observations influence particular covariate effects.  The syntax for plotting DFBetas using `plot_dfbetas()` roughly follows the prior syntax.  It does, however, include the optional `var_names` argument which can help in making the plot easier to interpret by plotting the user-given name above each covariate's associated plot.
+```{r, echo=TRUE, eval=TRUE}
+plot_dfbetas(coxph_fit = coxph_fit, var_names = c("Age", "Transplant", "Surgery"))
+```
+
 
 ## Cox-Snell Residuals
-`coxtools` has two functions for visualizing the residuals for a `coxph` object: `plot_coxSnell_residuals()` and `plot_martingale_residuals()`.  The `plot_coxSnell_residuals()` function takes some `coxph` fit object and plots the stratified Cox-Snell residuals with a comparison unit-exponential line.  Cox-Snell residuals show the difference between an observed gap time and the predicted or fitted gap time [@box2004event].  Using the `coxph_fit` object fit in the prior chunk of code, we can easily plot the Cox-Snell residuals using the `plot_coxSnell_residuals()` function.  This function will, by default, account for stratifying variables.
+`coxtools` has two functions for visualizing the residuals for a `coxph` object: `plot_coxSnell_residuals()` and `plot_deviance_residuals()`.  The `plot_coxSnell_residuals()` function takes some `coxph` fit object and plots the stratified Cox-Snell residuals with a comparison unit-exponential line.  Cox-Snell residuals show the difference between an observed gap time and the predicted or fitted gap time [@box2004event].  Using the `coxph_fit` object fit in the prior chunk of code, we can easily plot the Cox-Snell residuals using the `plot_coxSnell_residuals()` function.  This function will, by default, account for stratifying variables.
 
 ```{r, echo=TRUE, eval=TRUE}
 plot_coxSnell_residuals(coxph_fit)
@@ -47,12 +81,13 @@ coxph_fit_strat <- coxph(Surv(start, stop, event) ~
 plot_coxSnell_residuals(coxph_fit_strat)
 ```
 
-## Martingale Residuals
-The `coxtools` package also has a function for plotting Martingale residuals, `plot_martingale_residuals()`, which takes some `coxph` fit and plots the Martingale residuals.  The two plots returned are designed to help the analyst understand which observations are poorly predicted and how model performance fairs with respect to timing of events.  
+## Deviance Residuals
+The `coxtools` package also has a function for plotting deviance residuals, `plot_deviance_residuals()`, which takes some `coxph` fit and plots the deviance residuals.  The two plots returned are designed to help the analyst understand which observations are poorly predicted and how model performance fairs with respect to timing of events.  
 
-```{r, echo=TRUE, eval = FALSE}
-plot_martingale_residuals(coxph_fit)
+```{r, echo=TRUE, eval = TRUE}
+plot_deviance_residuals(coxph_fit)
 ```
+
 
 # References
 
