--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -52,7 +52,8 @@ To assist in assessing model fit and to aid in interpretation, `coxtools` has a 
 
 ```{r, echo=TRUE, eval=TRUE}
 
-plot_predicted_probs(coxph_fit,
+library(coxtools)
+plot_predicted_probs(coxph_fit = coxph_fit,
                      var = "age",
                      time = mean(heart$stop-heart$start),
                      seed = 123,
@@ -71,21 +72,21 @@ plot_dfbetas(coxph_fit = coxph_fit, var_names = c("Age", "Transplant", "Surgery"
 `coxtools` has three functions for visualizing the residuals for a `coxph` object: `plot_coxSnell_residuals()`, `plot_deviance_residuals()`, and `plot_marginale_residuals()`.  The `plot_coxSnell_residuals()` function takes some `coxph` fit object and plots the stratified Cox-Snell residuals with a comparison unit-exponential line.  Cox-Snell residuals show the difference between an observed gap time and the predicted or fitted gap time [@box2004event].  A well-fitting model will hve residuals that hug the unit exponential line.  Using the `coxph_fit` object fit in the prior chunk of code, we can easily plot the Cox-Snell residuals using the `plot_coxSnell_residuals()` function.  This function will, by default, account for stratifying variables.
 
 ```{r, echo=TRUE, eval=TRUE}
-plot_coxSnell_residuals(coxph_fit)
+plot_coxSnell_residuals(coxph_fit = coxph_fit)
 
 coxph_fit_strat <- coxph(Surv(start, stop, event) ~
                            age + surgery + strata(transplant),
                          data = heart,
                          x = TRUE)
 
-plot_coxSnell_residuals(coxph_fit_strat)
+plot_coxSnell_residuals(coxph_fit = coxph_fit_strat)
 ```
 
 ## Deviance Residuals
 The `coxtools` package also has a function for plotting deviance residuals, `plot_deviance_residuals()`, which takes some `coxph` fit and plots the deviance residuals.  The two plots returned are designed to help the analyst understand which observations are poorly predicted and how model performance fairs with respect to timing of events.  These plots are useful for allowing analysts to understand how well particular observations are predicted.  The second plot is particularly of interest when it is unclear whether all observations will eventually experience an event after some period of time.  
 
-```{r, echo=TRUE, eval = TRUE}
-plot_deviance_residuals(coxph_fit)
+```{r, echo=TRUE, eval=TRUE}
+plot_deviance_residuals(coxph_fit = coxph_fit)
 ```
 
 ## Martingale Residuals
